--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,11 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
   </head>
+  
   <body>
+  <div class="container is-max-desktop">
   
     <my-app>loading</my-app>
-  
+  </div>
   </body>
 </html>
