--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css"
     />
   </head>
 
   <body>
-    <div class="container-is-5">
-      <my-app>loading</my-app>
-    </div>
+    <section class="hero is-fullheight">
+      <div class="hero-body has-text-centered">
+        <my-app>loading</my-app>
+      </div>
+    </section>
   </body>
 </html>
